# Placer

./: .cproject  .gitignore  .project  Cluster_group.gnu  Cluster_group.gnu_overfillesBins  Cluster_group.gnu_region  Lower-Bound-Place_HPWL  Makefile  Upper-Bound-Place_HPWL  download.sh  gplace.gnu  gplace.gnu_fix  gplace.gnu~  log  run.sh  run_DP.sh
cgsolver/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac
cgsolver/autom4te.cache/: output.1  traces.0  traces.1
cgsolver/include/: cgsolver.h  util.h
cgsolver/src/: Makefile  Makefile.am  Makefile.in  cgsolver.cpp  main.cpp  pcg
cgsolver/src/.deps/: GP-b2bNetModel.Po  GP-bin.Po  GP-cgsolver.Po  GP-chip.Po  GP-clusterSpreader.Po  GP-globalPlacer.Po  GP-hybridNetModel.Po  GP-net.Po  GP-node.Po  GP-pcg.Po  GP-placer.Po  GP-placerBeta.Po  GP-row.Po  GP-spreader.Po  GP-util.Po  pcg-cgsolver.Po  pcg-main.Po  pcg-util.Po
include/: RLRegion.h  String.h  array.h  base.h  baseMsg.h  block.h  cgsolver.h  cluster.h  collectionAndIter.h  commandMonitor.h  datatype.h  define.h  design.h  diptr.h  dplace.h  enum.h  extension.h  hash.h  hashTable.h  inst.h  instOA.h  instTerm.h  layer.h  ldpUtility.h  ldplace.h  ldplaceRow.h  list.h  logfile.h  mathtype.h  message.h  module.h  net.h  netOA.h  oa  occTraverser.h  place.h  point.h  rect.h  regionQuery.h  row.h  (+17 more)
src/: String.cpp  amgpcg.cpp  base.cpp  baseMsg.cpp  block.cpp  blockBookshelf.cpp  buildB2B.cpp  cellInflation.cpp  cellMovement.cpp  cgsolver.cpp  cluster.cpp  dbTclCommands.cpp  design.cpp  dplace.cpp  fpCG.cpp  gplace.cpp  inst.cpp  instOA.cpp  (+22 more)
